--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ Flask-DebugToolbar==0.16.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 idna==3.10
+importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 lxml==5.3.0
@@ -25,3 +26,6 @@ SQLAlchemy==2.0.35
 typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.0.4
+zipp==3.21.0
+flask_cors==5.0.0
+flask_jwt_extended== 4.6.0
