--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.7.8",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
@@ -47,9 +49,5 @@
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
   },
-
   "proxy": "http://localhost:5000"
-
 }
-
-
