--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,17 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^3.0.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.96.1"
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -47,7 +47,14 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1"
+    "@babel/core": "^7.26.7",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "babel-jest": "^29.7.0",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "^5.0.1"
   },
   "proxy": "http://localhost:5000"
 }
